Resolving sonar issue.